--- a/main.css
+++ b/main.css
@@ -1,13 +1,15 @@
 body {
   margin: 0;
+  font-family: sans-serif;
 }
 
 .form-header {
   margin-top: 0;
+  color: #fff;
 }
 
 .logo {
-  padding-top: 5%; 
+  padding-top: 5%;
 
 }
 .homepage {
@@ -15,4 +17,21 @@ body {
   width: 100%;
   height: 100vh;
   text-align: center;
+}
+
+.register-form{
+  border: 1px solid #333;
+  padding: 5% 5%;
+  width: 33%;
+  background: rgba(69, 69, 69, 0.66);
+
+}
+
+.register-form input[type="submit"] {
+  background: #FF6700;
+  padding: 1% 2%;
+  color: #fff;
+  border: 1px solid orange;
+  text-transform: uppercase;
+  font-weight: 600;
 }
