--- a/main.css
+++ b/main.css
@@ -6,6 +6,7 @@ body {
 .form-header {
   margin-top: 0;
   color: #fff;
+  margin-bottom: .5%;
 }
 
 .logo {
@@ -21,10 +22,17 @@ body {
 
 .register-form{
   border: 1px solid #333;
-  padding: 5% 5%;
-  width: 33%;
+  padding: 5% 5% 5% 5%;
+  width: 60%;
   background: rgba(69, 69, 69, 0.66);
+  margin: 0 auto;
 
+}
+
+
+.register-form input[type="text"] {
+  width: 50%;
+  padding: 1% 3% 1% 0.5%;
 }
 
 .register-form input[type="submit"] {
@@ -34,4 +42,9 @@ body {
   border: 1px solid orange;
   text-transform: uppercase;
   font-weight: 600;
+}
+
+.register-form input[type="submit"]:hover {
+  cursor: pointer;
+
 }
