--- a/main.css
+++ b/main.css
@@ -6,11 +6,14 @@ body {
 .form-header {
   margin-top: 0;
   color: #fff;
-  margin-bottom: .5%;
+  margin-bottom: 3.5%;
+  text-transform: uppercase;
+  letter-spacing: 1.11px;
 }
 
 .logo {
   padding-top: 5%;
+  margin-bottom: 3%;
 
 }
 .homepage {
@@ -22,9 +25,9 @@ body {
 
 .register-form{
   border: 1px solid #333;
-  padding: 5% 5% 5% 5%;
+  padding: 3% 4% 3.5% 4%;
   width: 60%;
-  background: rgba(69, 69, 69, 0.66);
+  background: rgba(69, 69, 69, 0.45);
   margin: 0 auto;
 
 }
