--- a/main.css
+++ b/main.css
@@ -51,3 +51,11 @@ body {
   cursor: pointer;
 
 }
+
+.text {
+  color: #fff;
+  line-height: 1.4;
+  width: 50%;
+  text-align: center;
+  margin: 0 auto;
+}
